# localslackirc

./: pyproject.toml
localslackirc/: irc.py  slack.py
