[tool.poetry]
name = "localslackirc"
version = "1.11"
description = "IRC gateway for slack, running on localhost for one user"
authors = ["Salvo Tomaselli <tiposchi@tiscali.it>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
typedload = ">=2"
websockets = "^8.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
localslackirc = "localslackirc.irc:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
